@@ -24,19 +24,5 @@ time.
 
 The :code:`init()` method of the base connector class
 (:code:`\Cobweb\Svconnector\Service\ConnectorBase`) performs some initializations,
-including reading its own configuration. So in your own service
-you should always call the parent method and - if reading a specific
-configuration - you should store it in its own member variable
-or merge it with the base class configuration.
-The code should look something like:
-
-.. code-block:: php
-
-	protected function init() {
-		parent::init();
-		$localConfiguration = unserialize($GLOBALS['TYPO3_CONF_VARS']['EXT']['extConf'][$this->extKey]);
-		$this->extConfiguration = array_merge($this->extConfiguration, $localConfiguration);
-	}
-
-Obviously you can ignore this if your extension has no configuration.
-
+in particular creating an instance of the :code:`\TYPO3\CMS\Core\Log\Logger` class.
+So in your own service you should always call the parent method.
